// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> render: props: {} 1`] = `
<input
  checked={false}
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`<Checkbox /> render: props: className="test" 1`] = `
<input
  checked={false}
  className="test"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`<Checkbox /> render: props: name="test" 1`] = `
<input
  checked={false}
  name="test"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`<Checkbox /> render: props: render="test" 1`] = `
<input
  checked={false}
  className="Input-test"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`<Checkbox /> render: props: render="test" 2`] = `
<input
  checked={true}
  className="Input-test"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`<Checkbox /> render: props: render="test" 3`] = `
<input
  checked={false}
  className="test"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`<Checkbox /> render: props: required 1`] = `
<input
  checked={false}
  onChange={[Function]}
  required={true}
  type="checkbox"
/>
`;

exports[`<Checkbox /> render: props: type="test" 1`] = `
<input
  checked={false}
  onChange={[Function]}
  type="test"
/>
`;

exports[`<Checkbox /> render: props: value 1`] = `
<input
  checked={true}
  onChange={[Function]}
  type="checkbox"
/>
`;
